Fix image vertical alignment and adjust hover background color for card component

--- a/CSS_advanced/styles/30-style.css
+++ b/CSS_advanced/styles/30-style.css
@@ -338,11 +338,11 @@ ul.row {
     overflow: hidden;
 }
 
-.card-work .card-image img {
+.card-work .card-image img{
     height: 30rem;
     width: 100%;
     object-fit: cover;
-    vertical-align: center;
+    vertical-align: bottom;
 }
 
 .card-work .card-inner {
@@ -354,7 +354,7 @@ ul.row {
 }
 
 .card-work:hover .card-inner {
-    background-color: rgb(0, 0, 0, 0.7);
+    background-color: rgba(0, 0, 0, 0.7);
 }
 
 .card-work .card-title {
@@ -375,9 +375,9 @@ ul.row {
     content: "";
     position: absolute;
     top: 0;
-    right: 0;
-    bottom: 0;
     left: 0;
+    bottom: 0;
+    right: 0;
 }
 
 .card-work:hover .card-title {
